--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,10 @@
 {% extends "index.html" %}
 {% block body %}
+{% load static %}
 <div class="container">
+    <div class="image">
+        <img src={% static "linkedinProfile.jpeg" %} alt="" height='200px'>
+    </div>
     <div class="px-3">
         <h1>Welcome to Code with Asad.</h1>
         <p class="lead">You can check my links from here. Code with Asad is a YouTube Channel created by Sir Asad</p>
