--- a/templates/index.html
+++ b/templates/index.html
@@ -81,7 +81,7 @@
             <div>
                 <h3 class="float-md-start mb-0">Code With Asad</h3>
                 <nav class="nav nav-masthead justify-content-center float-md-end">
-                    <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="/">Home</a>
                     <a class="nav-link fw-bold py-1 px-0" href="/">Contact</a>
                     <a class="nav-link fw-bold py-1 px-0" href="/login">Login</a>
                 </nav>
@@ -98,5 +98,6 @@
     <script src="https://getbootstrap.com/docs/5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    </body>
+</body>
+
 </html>
